package game.entities;

public interface EntityController {
    public void onUpdate();
}
